--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: .NET Core Build
+name: Build Image
 
 on:
   push:
@@ -26,17 +26,17 @@ jobs:
       #   uses: sigstore/cosign-installer@v3.3.0
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.5.0
+        uses: docker/setup-buildx-action@v3.0.0
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2.1.0
+        uses: docker/login-action@v3.0.0
         with:
           registry: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
           username: ${{ vars.WD_HARBOR_LIBRARY_USER }}
           password: ${{ secrets.WD_HARBOR_LIBRARY_PASSWORD }}
 
       - id: docker_meta
-        uses: docker/metadata-action@v4.4.0
+        uses: docker/metadata-action@v5.5.0
         with:
           images: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss
           tags: |
@@ -45,13 +45,12 @@ jobs:
             type=semver,pattern={{version}}
 
       - name: Build and Push container images
-        uses: docker/build-push-action@v4.0.0
+        uses: docker/build-push-action@v5.1.0
         id: build-and-push
         with:
-          platforms: linux/amd64
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
-          lables: ${{ steps.docker_meta.outputs.annotations }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
 
       # # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
       # - name: Sign image with a key
