--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,76 +8,37 @@ on:
 
 jobs:
 
-  build-signed-image:
+  build-image:
+
     runs-on: ubuntu-latest
-
-    # permissions:
-    #   contents: read
-    #   packages: write
-    #   id-token: write # needed for signing the images with GitHub OIDC Token
-
     name: build-image
     steps:
-      - uses: actions/checkout@v3.5.2
-        with:
-          fetch-depth: 1
 
-      # - name: Install Cosign
-      #   uses: sigstore/cosign-installer@v3.3.0
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
           username: ${{ vars.WD_HARBOR_LIBRARY_USER }}
           password: ${{ secrets.WD_HARBOR_LIBRARY_PASSWORD }}
 
-      - id: docker_meta
-        uses: docker/metadata-action@v5.5.0
+      - id: meta
+        uses: docker/metadata-action@v5
         with:
           images: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss
           tags: |
             type=sha
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-            type=semver,pattern={{version}}
 
       - name: Build and Push container images
-        uses: docker/build-push-action@v5.1.0
+        uses: docker/build-push-action@v5
         id: build-and-push
         with:
           push: true
-          platforms: linux/amd64,linux/arm64/v8
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
-
-      # # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
-      # - name: Sign image with a key
-      #   run: |
-      #     images=""
-      #     for tag in ${TAGS}; do
-      #       images+="${tag}@${DIGEST} "
-      #     done
-      #     cosign sign --yes --key env://COSIGN_PRIVATE_KEY ${images}
-      #   env:
-      #     TAGS: ${{ steps.docker_meta.outputs.tags }}
-      #     COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-      #     COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
-      #     DIGEST: ${{ steps.build-and-push.outputs.digest }}
-
-      # - name: Sign the images with GitHub OIDC Token
-      #   env:
-      #     DIGEST: ${{ steps.build-and-push.outputs.digest }}
-      #     TAGS: ${{ steps.docker_meta.outputs.tags }}
-      #   run: |
-      #     images=""
-      #     for tag in ${TAGS}; do
-      #       images+="${tag}@${DIGEST} "
-      #     done
-      #     cosign sign --yes ${images}
-          
+          platforms: linux/amd64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
