added parameters for critical pod consideration

--- a/chart/templates/daemonset.yaml
+++ b/chart/templates/daemonset.yaml
@@ -27,6 +27,8 @@ spec:
                   apiVersion: v1
                   fieldPath: metadata.namespace
           image: r.world-direct.at/library/suss:latest
+          args:
+            - -considerStatefulSetCritical
           imagePullPolicy: Always
           livenessProbe:
             failureThreshold: 3
