--- a/.github/workflows/goreleaser-test.yml
+++ b/.github/workflows/goreleaser-test.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: snapshot --clean
+          args: release --snapshot --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
