--- a/.github/workflows/goreleaser-test.yml
+++ b/.github/workflows/goreleaser-test.yml
@@ -12,10 +12,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: 1.21.5
+
+      - name: run tests
+        run:  go test ./...
+
       - id: goreleaser
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
