--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,7 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
+    - go test ./...
 
 builds:
   - env:
@@ -51,5 +52,5 @@ changelog:
 dockers:
   - id: myimg
     image_templates:
-          - "suss:latest"
-    dockerfile: "./Dockerfile"
+    - "suss:latest"
+    - "suss:{{ .Version }}"
