--- a/.github/workflows/goreleaser-test.yml
+++ b/.github/workflows/goreleaser-test.yml
@@ -12,14 +12,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: 1.21.5
+          cache: true
 
       - name: run tests
         run:  go test ./...
+
+      - name: Login to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
+          username: ${{ vars.WD_HARBOR_LIBRARY_USER }}
+          password: ${{ secrets.WD_HARBOR_LIBRARY_PASSWORD }}
 
       - id: goreleaser
         name: Run GoReleaser
@@ -30,13 +38,3 @@ jobs:
           args: release --snapshot --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: test image available
-        run: docker image ls
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
-          username: ${{ vars.WD_HARBOR_LIBRARY_USER }}
-          password: ${{ secrets.WD_HARBOR_LIBRARY_PASSWORD }}
