--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -54,5 +54,6 @@ changelog:
 dockers:
   - id: myimg
     image_templates:
-    - "{{ .Env.REPOSITORY }}/suss:{{ .Version }}"
+    # we use the latest tag here because we will retrag and push the image
+    # outside of goreleaser
     - "{{ .Env.REPOSITORY }}/suss:latest"
