--- a/.github/workflows/goreleaser-test.yml
+++ b/.github/workflows/goreleaser-test.yml
@@ -42,10 +42,6 @@ jobs:
         env:
           MD: ${{steps.goreleaser.outputs.metadata}}
 
-      - name: retrag and push docker image
-        run: |
-          docker tag ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:latest ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
-          docker push ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
 
       - name: Login to Container Registry
         uses: docker/login-action@v3
@@ -53,3 +49,15 @@ jobs:
           registry: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
           username: ${{ vars.WD_HARBOR_LIBRARY_USER }}
           password: ${{ secrets.WD_HARBOR_LIBRARY_PASSWORD }}
+
+      - name: retrag and push docker image
+        run: |
+          docker tag ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:latest ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
+          docker push ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
+
+      - name: build and push chart
+        run: |
+          helm lint ./chart
+          helm package chart/ --version ${{ env.version }} --destination=./dist
+          helm push ./dist/suss-${{ env.version }}.tgz oci://${{ vars.WD_HARBOR_CHART_REPOSITORY_NAME }}
+          
