--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -52,6 +52,11 @@ changelog:
 
 dockers:
   - id: myimg
+
+    # we push outside of golreleaser to have more control over this stage
+    # we can just retag or may build an own image based on this one
+    skip_push: true
+    
     image_templates:
     # we use the latest tag here because we will retrag and push the image
     # outside of goreleaser
