use version directly

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,14 +8,6 @@
 
 version: 1
 
-env:
-  - REPOSITORY={{ if index .Env "WD_HARBOR_REPOSITORY_NAME"  }}{{ .Env.WD_HARBOR_REPOSITORY_NAME }}{{ else }}dev{{ end }}
-
-before:
-  hooks:
-    - ./.github/workflows/setversion.sh {{ .Version }}
-    - go mod tidy
-
 builds:
   - env:
       - CGO_ENABLED=0
@@ -51,13 +43,11 @@ changelog:
       - "^test:"
 
 dockers:
-  - id: myimg
+  - id: app
 
     # we push outside of golreleaser to have more control over this stage
     # we can just retag or may build an own image based on this one
     skip_push: true
     
     image_templates:
-    # we use the latest tag here because we will retrag and push the image
-    # outside of goreleaser
-    - "{{ .Env.REPOSITORY }}/suss:latest"
+    - "{{ .Env.REPOSITORY }}/suss:{{.Version}}"
