--- a/.github/workflows/test-gh-registry.yml
+++ b/.github/workflows/test-gh-registry.yml
@@ -15,45 +15,33 @@ jobs:
         with:
           fetch-depth: 0
 
-    #   - name: Set up Go
-    #     uses: actions/setup-go@v5
-    #     with:
-    #       go-version: 1.21.5
-    #       cache: true
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.21.5
+          cache: true
 
     #   - name: run tests
     #     run:  go test ./...
-
-    #   - id: goreleaser
-    #     name: Run GoReleaser
-    #     uses: goreleaser/goreleaser-action@v5
-    #     with:
-    #       distribution: goreleaser
-    #       version: latest
-    #       args: release --clean --snapshot
-    #     env:
-    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #       WD_HARBOR_REPOSITORY_NAME: ${{ vars.WD_HARBOR_REPOSITORY_NAME }}
-
-    #   - name: set outputs from goreleaser
-    #     run: |
-    #       version=$(echo $MD | jq -r ".version")
-    #       echo "version=$version" >> $GITHUB_ENV
-    #     env:
-    #       MD: ${{steps.goreleaser.outputs.metadata}}
 
 
       - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-    #   - name: retrag and push docker image
-    #     run: |
-    #       docker tag ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:latest ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
-    #       docker push ${{ vars.WD_HARBOR_REPOSITORY_NAME }}/suss:${{ env.version }}
+      - id: goreleaser
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean --snapshot
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ github.repository_owner }}/suss
 
     #   - name: build and push chart
     #     run: |
