read go version from go.mod for action workflows, fixes depedabot problems

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -10,16 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     env:
       version: unknown # we be set by goreleaser
+      goversion: "" # will read from go.mod
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      - name: extract go version from go.mod
+        run: |
+          goversion=$(go list -f {{.GoVersion}} -m)
+          echo "goversion=$goversion" >> $GITHUB_ENV
+          echo "goversion=$goversion" # log output
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21.5
+          go-version: ${{ env.goversion }}
           cache: true
 
       - name: run tests
